--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "git+https://github.com/apollostack/graphql-server.git"
   },
   "scripts": {
+    "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "prebootstrap": "npm install",
@@ -39,7 +40,6 @@
     "url": "https://github.com/cdmbase/learna-bootstrap/issues"
   },
   "devDependencies": {
-    "lerna": "2.0.0-beta.37",
     "@types/graphql": "^0.8.6",
     "@types/jest": "^16.0.4",
     "@types/node": "^7.0.0",
@@ -50,6 +50,8 @@
     "istanbul": "1.0.0-alpha.2",
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
+    "json-loader": "^0.5.4",
+    "lerna": "2.0.0-beta.37",
     "node-dev": "^3.1.3",
     "npm-check-updates": "^2.8.9",
     "remap-istanbul": "^0.8.4",
@@ -58,6 +60,6 @@
     "ts-jest": "^18.0.1",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
-    "typescript": "2.1.5"
+    "typescript": "2.1.6"
   }
 }
