--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "pretest": "npm run compile",
     "test": "jest",
     "posttest": "npm run lint",
-    "testonly": "mocha --reporter spec --full-trace --timeout 5000 ./test/tests.js",
     "coverage": "jest --coverage",
     "pretravis": "npm run compile",
     "travis": "istanbul cover -x \"*.test.js\" _mocha -- --timeout 5000 --full-trace ./test/tests.js",
@@ -56,10 +55,14 @@
     "npm-check-updates": "^2.8.9",
     "remap-istanbul": "^0.8.4",
     "sinon": "^1.17.7",
+    "sinon-as-promised": "^4.0.0",
     "standard-version": "^4.0.0",
     "ts-jest": "^18.0.1",
     "tslint": "^4.3.1",
     "tslint-loader": "^3.3.0",
     "typescript": "2.1.6"
+  },
+  "dependencies": {
+    "export-dir": "^0.1.2"
   }
 }
