--- a/packages/client-common/package.json
+++ b/packages/client-common/package.json
@@ -4,6 +4,8 @@
   "//": "Check all github.com/este/este#dev-tasks",
   "scripts": {
     "build": "gulp build",
+    "dist:umd": "NODE_ENV=dev webpack",
+    "dist:min": "NODE_ENV=production webpack",
     "flow": "flow",
     "install": "gulp native-fix",
     "jest": "jest",
@@ -16,6 +18,50 @@
     "rootDir": "src"
   },
   "dependencies": {
+    "bluebird": "^3.0.5",
+    "color": "^1.0.3",
+    "compression": "^1.4.0",
+    "del": "^2.1.0",
+    "export-dir": "^0.1.2",
+    "fela": "^4.1.0",
+    "fela-native": "^4.1.1",
+    "fela-plugin-logger": "^4.1.0",
+    "fela-plugin-placeholder-prefixer": "^4.1.2",
+    "fela-plugin-validator": "^4.1.0",
+    "fela-preset-web": "^4.1.0",
+    "flow-bin": "^0.37.0",
+    "gravatar": "^1.6.0",
+    "iflow-react-intl": "^1.2.0",
+    "intl": "^1.0.0",
+    "intl-locales-supported": "^1.0.0",
+    "intl-messageformat": "^1.1.0",
+    "intl-relativeformat": "^1.1.0",
+    "invariant": "^2.1.2",
+    "ip": "^1.0.2",
+    "localforage": "^1.4.3",
+    "make-error": "^1.0.4",
+    "nconf": "^0.8.1",
+    "ramda": "^0.23.0",
+    "raven-js": "^3.0.3",
+    "react-fela": "^4.0.1",
+    "react-helmet": "^4.0.0",
+    "react-intl": "^2.1.2",
+    "react-redux": "^5.0.1",
+    "react-router": "4.0.0-alpha.6",
+    "redbox-react": "^1.0.5",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.7.4",
+    "redux-observable": "^0.13.0",
+    "redux-persist": "^4.0.1",
+    "regenerator": "^0.9.5",
+    "regenerator-runtime": "^0.10.0",
+    "serialize-javascript": "^1.1.2",
+    "through2": "^2.0.1",
+    "uuid": "^3.0.0",
+    "validator": "^6.0.0",
+    "yargs": "^6.0.0"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.1.0",
     "babel-core": "^6.6.0",
     "babel-eslint": "^7.0.0",
@@ -29,16 +75,13 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-react-native": "^1.9.0",
     "babel-preset-stage-1": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
-    "bluebird": "^3.0.5",
-    "color": "^1.0.3",
-    "compression": "^1.4.0",
+    "inline-style-prefixer": "^2.0.5",
+    "rxjs": "^5.0.3",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
-    "del": "^2.1.0",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.1.1",
@@ -48,64 +91,25 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.0.0",
-    "eslint-plugin-react-native": "^2.0.0",
-    "express": "^4.14.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "fela": "^4.1.0",
-    "fela-native": "^4.1.1",
-    "fela-plugin-logger": "^4.1.0",
-    "fela-plugin-placeholder-prefixer": "^4.1.2",
-    "fela-plugin-validator": "^4.1.0",
-    "fela-preset-web": "^4.1.0",
     "file-loader": "^0.10.0",
-    "flow-bin": "^0.37.0",
-    "gravatar": "^1.6.0",
-    "iflow-react-intl": "^1.2.0",
-    "inline-style-prefixer": "^2.0.5",
-    "intl": "^1.0.0",
-    "intl-locales-supported": "^1.0.0",
-    "intl-messageformat": "^1.1.0",
-    "intl-relativeformat": "^1.1.0",
-    "invariant": "^2.1.2",
-    "ip": "^1.0.2",
-    "jest": "^18.1.0",
-    "localforage": "^1.4.3",
-    "make-error": "^1.0.4",
-    "nconf": "^0.8.1",
-    "nodemon": "^1.8.1",
     "postcss-loader": "^1.1.0",
-    "ramda": "^0.23.0",
-    "raven-js": "^3.0.3",
-    "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-fela": "^4.0.1",
-    "react-helmet": "^4.0.0",
-    "react-intl": "^2.1.2",
-    "react-redux": "^5.0.1",
-    "react-router": "4.0.0-alpha.6",
-    "redbox-react": "^1.0.5",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.7.4",
-    "redux-observable": "^0.13.0",
-    "redux-persist": "^4.0.1",
-    "regenerator": "^0.9.5",
-    "regenerator-runtime": "^0.10.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
-    "rxjs": "^5.0.3",
-    "serialize-javascript": "^1.1.2",
-    "sinon": "^1.17.2",
-    "sinon-as-promised": "^4.0.0",
-    "style-loader": "^0.13.0",
-    "through2": "^2.0.1",
     "url-loader": "^0.5.5",
-    "uuid": "^3.0.0",
-    "validator": "^6.0.0",
+    "style-loader": "^0.13.0",
+    "nodemon": "^1.8.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0",
-    "webpack-isomorphic-tools": "^2.6.5",
-    "yargs": "^6.0.0"
+    "webpack-isomorphic-tools": "^2.6.5"
+  },
+  "peerDependencies": {
+    "react": ">^15.0.0",
+    "react-dom": ">^15.0.0",
+    "rxjs": ">^5.0.0"
   }
 }
