--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -35,16 +35,21 @@
     "lodash": "^4.16.4"
   },
   "devDependencies": {
-    "graphql-code-generator": "^0.1.7",
-    "graphql-subscriptions": "^0.3.0",
     "@types/jest": "^18.1.1",
-    "webpack-node-externals": "^1.5.4",
-    "webpack": "^2.1.0-beta.21"
+    "graphql-code-generator": "^0.5.1",
+    "graphql-subscriptions": "^0.3.0",
+    "rimraf": "^2.6.1",
+    "webpack": "^2.2.1",
+    "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0"
   },
   "optionalDependencies": {
     "@types/graphql": "^0.8.5"
+  },
+  "typings": "dist/main.d.ts",
+  "typescript": {
+    "definition": "dist/main.d.ts"
   }
 }
