--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -56,8 +56,9 @@
     "@types/graphql": "^0.8.6",
     "@types/jest": "^18.1.1",
     "@types/node": "^7.0.0",
-    "webpack-node-externals": "^1.5.4",
-    "webpack": "^2.1.0-beta.21"
+    "rimraf": "^2.6.1",
+    "webpack": "^2.2.1",
+    "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0"
