--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "node-dev": "^3.1.3",
     "npm-check-updates": "^2.8.9",
     "remap-istanbul": "^0.9.5",
+    "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
     "sinon-as-promised": "^4.0.0",
     "standard-version": "^4.0.0",
