--- a/packages/sample-server-core/tsconfig.json
+++ b/packages/sample-server-core/tsconfig.json
@@ -2,15 +2,13 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./lib",
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "outDir": "./lib"
   },
   "exclude": [
     "node_modules",
-    "lib",
     "dist",
+    "test",
+    "lib",
     "webpack.config.js"
   ]
 }
