--- a/package.json
+++ b/package.json
@@ -46,63 +46,63 @@
   "devDependencies": {
     "@types/graphql": "^0.9.0",
     "@types/jest": "^19.2.2",
-    "@types/react": "^15.0.17",
+    "@types/react": "^15.0.21",
     "@types/redux": "^3.6.0",
-    "@types/node": "^7.0.0",
-    "@types/sinon": "^2.1.0",
+    "@types/node": "^7.0.12",
+    "@types/sinon": "^2.1.1",
     "apollo-codegen": "^0.10.9",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
-    "babel-cli": "^6.6.4",
-    "babel-core": "^6.6.4",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.6.4",
-    "babel-plugin-transform-object-rest-spread": "^6.6.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "concurrently": "^3.1.0",
-    "css-loader": "^0.25.0",
-    "graphql": "^0.9.0",
+    "awesome-typescript-loader": "^3.1.2",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "concurrently": "^3.4.0",
+    "css-loader": "^0.28.0",
+    "graphql": "^0.9.2",
     "graphql-code-generator": "^0.5.1",
-    "graphql-subscriptions": "^0.3.0",
+    "graphql-subscriptions": "^0.3.1",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
     "json-loader": "^0.5.4",
     "lerna": "2.0.0-beta.38",
-    "lodash": "^4.16.4",
-    "nock": "^9.0.2",
+    "lodash": "^4.17.4",
+    "nock": "^9.0.11",
     "node-dev": "^3.1.3",
-    "npm-check-updates": "^2.8.9",
+    "npm-check-updates": "^2.10.5",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.3.0",
+    "react-addons-test-utils": "^15.4.2",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
-    "sinon-as-promised": "^4.0.0",
+    "sinon-as-promised": "^4.0.3",
     "standard-version": "^4.0.0",
     "ts-jest": "^19.0.6",
     "ts-loader": "^2.0.3",
     "tslint": "^5.0.0",
-    "tslint-loader": "^3.3.0",
-    "typescript": "^2.1.6",
-    "webpack": "^2.2.1",
+    "tslint-loader": "^3.4.3",
+    "typescript": "^2.2.2",
+    "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
     "cdm-logger": "^0.3.2",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
+    "cors": "^2.8.3",
+    "express": "^4.15.2",
     "graphql": "^0.9.1",
     "graphql-server-express": "^0.6.0",
-    "graphql-subscriptions": "^0.3.0",
-    "graphql-tools": "0.10.0",
-    "helmet": "^3.4.0",
-    "morgan": "^1.7.0",
-    "subscriptions-transport-ws": "^0.5.4",
-    "apollo-client": "^0.10.1",
-    "graphql-tag": "^1.1.2",
-    "node-pty": "^0.6.2",
-    "rxjs": "^5.2.0",
+    "graphql-subscriptions": "^0.3.1",
+    "graphql-tools": "0.11.0",
+    "helmet": "^3.5.0",
+    "morgan": "^1.8.1",
+    "subscriptions-transport-ws": "^0.5.5-alpha.0",
+    "apollo-client": "^1.0.1",
+    "graphql-tag": "^2.0.0",
+    "node-pty": "^0.6.3",
+    "rxjs": "^5.3.0",
     "classnames": "^2.2.5",
     "export-dir": "^0.1.2"
   }
