--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -38,34 +38,34 @@
   "homepage": "https://github.com/DxCx/webpack-apollo-server#readme",
   "dependencies": {
     "@sample/schema": "0.0.1",
-    "@types/body-parser": "0.0.33",
-    "@types/cors": "2.8.0",
+    "@types/body-parser": "1.16.3",
+    "@types/cors": "2.8.1",
     "@types/express": "^4.0.35",
-    "@types/helmet": "0.0.33",
+    "@types/helmet": "0.0.34",
     "@types/morgan": "^1.7.32",
-    "body-parser": "^1.16.0",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
+    "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
+    "express": "^4.15.2",
     "graphql-server-express": "^0.6.0",
-    "graphql-subscriptions": "^0.3.0",
-    "graphql-tools": "0.10.0",
-    "helmet": "^3.4.0",
-    "morgan": "^1.7.0",
-    "subscriptions-transport-ws": "^0.5.4"
+    "graphql-subscriptions": "^0.3.1",
+    "graphql-tools": "0.11.0",
+    "helmet": "^3.5.0",
+    "morgan": "^1.8.1",
+    "subscriptions-transport-ws": "^0.5.5-alpha.0"
   },
   "devDependencies": {
-    "@types/graphql": "^0.8.6",
-    "@types/jest": "^18.1.1",
-    "@types/node": "^7.0.0",
+    "@types/graphql": "^0.9.0",
+    "@types/jest": "^19.2.2",
+    "@types/node": "^7.0.12",
     "rimraf": "^2.6.1",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
     "graphql": "^0.8.0 || ^0.9.0"
   },
   "optionalDependencies": {
-    "@types/graphql": "^0.8.5"
+    "@types/graphql": "^0.9.0"
   },
   "typings": "dist/main.d.ts",
   "typescript": {
