--- a/packages/sample-graphql-schema/tsconfig.json
+++ b/packages/sample-graphql-schema/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
+    "module": "umd",
     "rootDir": "./src",
     "outDir": "./lib",
     "typeRoots": [
