--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "url": "https://github.com/cdmbase/learna-bootstrap/issues"
   },
   "devDependencies": {
-    "@types/graphql": "^0.9.0",
+    "@types/graphql": "^0.8.6",
     "@types/jest": "^19.2.2",
+    "@types/node": "^7.0.12",
     "@types/react": "^15.0.21",
     "@types/redux": "^3.6.0",
-    "@types/node": "^7.0.12",
     "@types/sinon": "^2.1.1",
     "apollo-codegen": "^0.10.9",
     "awesome-typescript-loader": "^3.1.2",
@@ -61,6 +61,9 @@
     "babel-preset-react": "^6.23.0",
     "concurrently": "^3.4.0",
     "css-loader": "^0.28.0",
+    "eslint": "^3.17.1",
+    "eslint-plugin-graphql": "^0.6.1",
+    "file-loader": "^0.11.1",
     "graphql": "^0.9.2",
     "graphql-code-generator": "^0.5.1",
     "graphql-subscriptions": "^0.3.1",
@@ -79,6 +82,7 @@
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
     "sinon-as-promised": "^4.0.3",
+    "source-map-loader": "^0.2.1",
     "standard-version": "^4.0.0",
     "ts-jest": "^19.0.6",
     "ts-loader": "^2.0.3",
@@ -95,7 +99,7 @@
     "graphql": "^0.9.1",
     "graphql-server-express": "^0.6.0",
     "graphql-subscriptions": "^0.3.1",
-    "graphql-tools": "0.11.0",
+    "graphql-tools": "0.10.0",
     "helmet": "^3.5.0",
     "morgan": "^1.8.1",
     "subscriptions-transport-ws": "^0.5.5-alpha.0",
