--- a/packages/sample-browser-server/package.json
+++ b/packages/sample-browser-server/package.json
@@ -19,6 +19,8 @@
     "@types/node": "^7.0.12",
     "@types/semver": "^5.3.31",
     "@types/sinon": "^2.1.1",
+    "eslint": "^3.17.1",
+    "eslint-plugin-graphql": "^0.6.1",
     "mocha": "^3.2.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3",
