--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -32,19 +32,22 @@
   "license": "MIT",
   "dependencies": {
     "cdm-logger": "^0.3.2",
-    "graphql-tools": "0.11.0",
+    "graphql-tools": "0.10.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
     "@types/jest": "^19.2.2",
     "graphql-code-generator": "^0.5.1",
     "graphql-subscriptions": "^0.3.1",
+    "eslint": "^3.17.1",
+    "eslint-plugin-graphql": "^0.6.1",
+    "graphql": "^0.9.1",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
   "peerDependencies": {
-    "graphql": "^0.8.0 || ^0.9.0"
+    "graphql": "^0.9.0 || ^0.10.0"
   },
   "optionalDependencies": {
     "@types/graphql": "^0.9.0"
