--- a/packages/sample-graphql-schema/tsconfig.json
+++ b/packages/sample-graphql-schema/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "module": "umd",
+    "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./lib",
     "typeRoots": [
