--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -58,8 +58,9 @@
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.12",
     "json-loader": "^0.5.4",
+    "jest": "^19.0.2",
     "rimraf": "^2.6.1",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
   "typings": "dist/main.d.ts",
