--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -28,7 +28,7 @@
     "type": "git",
     "url": "https://github.com/js-accounts/accounts/tree/master/packages/server"
   },
-  "author": "CDMBase",
+  "author": "CDMBase LLC",
   "license": "MIT",
   "dependencies": {
     "cdm-logger": "^0.3.2",
