--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "license": "MIT",
   "version": "0.0.1",
-  "author": "CDMbase (https://github.com/cdmbase)",
+  "author": "CDMbase LLC (https://github.com/cdmbase)",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/apollostack/graphql-server.git"
@@ -49,7 +49,9 @@
     "@types/jest": "^19.2.2",
     "@types/node": "^7.0.12",
     "@types/react": "^15.0.21",
+    "@types/react-dom": "^0.14.23",
     "@types/redux": "^3.6.0",
+    "@types/react-redux": "^4.4.38",
     "@types/sinon": "^2.1.1",
     "apollo-codegen": "^0.10.9",
     "awesome-typescript-loader": "^3.1.2",
@@ -66,6 +68,7 @@
     "eslint-plugin-graphql": "^0.6.1",
     "file-loader": "^0.11.1",
     "graphql": "^0.9.2",
+    "react-addons-test-utils": "^15.4.2",
     "graphql-code-generator": "^0.5.1",
     "graphql-subscriptions": "^0.3.1",
     "istanbul": "1.0.0-alpha.2",
@@ -90,7 +93,10 @@
     "tslint": "^5.0.0",
     "tslint-loader": "^3.4.3",
     "typescript": "^2.2.2",
+    "http-server": "^0.9.0",
+    "watch-http-server": "^0.7.6",
     "webpack": "^2.3.3",
+    "webpack-fail-plugin": "^1.0.6",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
@@ -103,6 +109,12 @@
     "graphql-tools": "0.10.0",
     "helmet": "^3.5.0",
     "morgan": "^1.8.1",
+    "react": "15.4.1",
+    "react-apollo": "^1.0.0-rc.3",
+    "react-redux": "4.4.6",
+    "redux": "3.6.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0",
     "subscriptions-transport-ws": "^0.5.5-alpha.0",
     "apollo-client": "^1.0.1",
     "graphql-tag": "^2.0.0",
