--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -56,6 +56,7 @@
     "@types/express": "^4.0.35",
     "@types/jest": "^19.2.2",
     "@types/morgan": "^1.7.32",
+    "@types/graphql": "^0.8.6",
     "@types/node": "^7.0.12",
     "json-loader": "^0.5.4",
     "jest": "^19.0.2",
