--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
     "node-dev": "^3.1.3",
     "npm-check-updates": "^2.10.5",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.4.2",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
@@ -93,10 +92,10 @@
     "tslint": "^5.0.0",
     "tslint-loader": "^3.4.3",
     "typescript": "^2.2.2",
-    "http-server": "^0.9.0",
-    "watch-http-server": "^0.7.6",
-    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2",
     "webpack-fail-plugin": "^1.0.6",
+    "webpack-visualizer-plugin": "^0.1.11",
+    "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
