added shortcut commands

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "lerna": "lerna bootstrap --hoist",
     "install": "npm run lerna && npm run build",
+    "prestart": "npm run build",
+    "start": "lerna run --scope *server start --stream",
+    "start:client": "lerna run --scope sample-browser-server start --stream",
+    "start:server": "lerna run --scope sample-apollo-server start --stream",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore @gitstack/*server",
     "build:packages:watch": "lerna run build:lib:watch --stream",
