fixed graphql duplication issue

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:client": "lerna run --scope sample-browser-server start --stream",
     "start:server": "lerna run --scope sample-apollo-server start --stream",
     "build": "npm run build:packages",
-    "build:packages": "lerna run build --ignore @gitstack/*server",
+    "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --stream",
     "prebootstrap": "npm install",
     "postinstall": "lerna bootstrap",
@@ -49,7 +49,7 @@
     "url": "https://github.com/cdmbase/learna-bootstrap/issues"
   },
   "devDependencies": {
-    "@types/graphql": "^0.8.6",
+    "@types/graphql": "^0.9.0",
     "@types/jest": "^19.2.2",
     "@types/node": "^7.0.12",
     "@types/react": "^15.0.21",
@@ -73,7 +73,6 @@
     "file-loader": "^0.11.1",
     "graphql": "^0.9.2",
     "react-addons-test-utils": "^15.4.2",
-    "graphql-code-generator": "^0.5.1",
     "graphql-subscriptions": "^0.3.1",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^19.0.2",
@@ -107,9 +106,9 @@
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "graphql": "^0.9.1",
-    "graphql-server-express": "^0.6.0",
+    "graphql-server-express": "^0.7.1",
     "graphql-subscriptions": "^0.3.1",
-    "graphql-tools": "0.10.0",
+    "graphql-tools": "0.11.0",
     "helmet": "^3.5.0",
     "morgan": "^1.8.1",
     "react": "15.4.1",
