--- a/packages/sample-graphql-schema/tsconfig.json
+++ b/packages/sample-graphql-schema/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "extends": "../../tsconfig",
   "compilerOptions": {
-    "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./lib",
     "typeRoots": [
-      "node_modules/@types"
+      "../../node_modules/@types/"
     ]
   },
   "exclude": [
