--- a/packages/sample-core/tsconfig.json
+++ b/packages/sample-core/tsconfig.json
@@ -2,12 +2,7 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./lib",
-    "declaration": true,
-    "declarationDir": "./lib",
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "outDir": "./lib"
   },
   "exclude": [
     "node_modules",
