--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -43,9 +43,10 @@
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
-    "graphql-server-express": "^0.6.0",
+    "graphql-server-express": "^0.7.1",
     "graphql-subscriptions": "^0.3.1",
-    "graphql-tools": "0.10.0",
+    "graphql-tools": "0.11.0",
+    "concurrently": "^3.4.0",
     "helmet": "^3.5.0",
     "morgan": "^1.8.1",
     "subscriptions-transport-ws": "^0.5.5-alpha.0"
@@ -56,7 +57,7 @@
     "@types/express": "^4.0.35",
     "@types/jest": "^19.2.2",
     "@types/morgan": "^1.7.32",
-    "@types/graphql": "^0.8.6",
+    "@types/graphql": "^0.9.0",
     "@types/node": "^7.0.12",
     "json-loader": "^0.5.4",
     "jest": "^19.0.2",
