--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.38",
     "@types/sinon": "^2.1.1",
+    "@types/semver": "^5.3.31",
     "apollo-codegen": "^0.10.9",
     "awesome-typescript-loader": "^3.1.2",
     "babel-cli": "^6.24.0",
