--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@types/graphql": "^0.9.0",
     "@types/jest": "^19.2.2",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.12",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^0.14.23",
