--- a/packages/sample-browser-server/package.json
+++ b/packages/sample-browser-server/package.json
@@ -25,6 +25,7 @@
     "@types/react-redux": "^4.4.38",
     "@types/semver": "^5.3.31",
     "@types/sinon": "^2.1.1",
+    "awesome-typescript-loader": "^3.1.2",
     "eslint": "^3.17.1",
     "eslint-plugin-graphql": "^0.6.1",
     "jest": "^19.0.2",
@@ -32,6 +33,7 @@
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
     "ts-jest": "^19.0.6",
+    "source-map-loader": "^0.2.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-fail-plugin": "^1.0.6",
