--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -16,6 +16,9 @@
     "build:lib": "webpack",
     "build:lib:watch": "npm run build:lib -- --watch"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Veera Marni",
   "license": "ISC",
   "peerDependencies": {
