--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@types/node": "^7.0.12",
     "@types/jest": "^19.2.2",
     "graphql-subscriptions": "^0.3.1",
     "eslint": "^3.17.1",
