--- a/packages/sample-client-redux/package.json
+++ b/packages/sample-client-redux/package.json
@@ -46,8 +46,7 @@
     "nock": "^9.0.11",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
-    "webpack": "^2.3.3",
-    "webpack-node-externals": "^1.5.4"
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "apollo-client": "^1.0.1",
