--- a/packages/sample-core/package.json
+++ b/packages/sample-core/package.json
@@ -22,8 +22,7 @@
     "@types/sinon": "^2.1.1",
     "typescript": "^2.2.2",
     "rimraf": "^2.6.1",
-    "webpack": "^2.3.3",
-    "webpack-node-externals": "^1.5.4"
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "inversify": "^3.3.0",
