--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -41,10 +41,9 @@
     "graphql-subscriptions": "^0.3.1",
     "eslint": "^3.17.1",
     "eslint-plugin-graphql": "^0.6.1",
-    "graphql": "^0.9.1",
+    "graphql": "^0.9.2",
     "rimraf": "^2.6.1",
-    "webpack": "^2.3.3",
-    "webpack-node-externals": "^1.5.4"
+    "webpack": "^2.3.3"
   },
   "peerDependencies": {
     "graphql": "^0.9.0 || ^0.10.0"
