--- a/package.json
+++ b/package.json
@@ -112,10 +112,10 @@
     "graphql-tools": "0.11.0",
     "helmet": "^3.5.0",
     "morgan": "^1.8.1",
-    "react": "15.4.1",
+    "react": "^15.4.2",
     "react-apollo": "^1.0.0-rc.3",
-    "react-redux": "4.4.6",
-    "redux": "3.6.0",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
     "subscriptions-transport-ws": "^0.5.5-alpha.0",
