--- a/packages/sample-client-react/tsconfig.json
+++ b/packages/sample-client-react/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "rootDir": "./src",
-    "jsx": "react"
+    "outDir": "./lib",
+    "jsx": "react",
+    "typeRoots": [
+      "../../node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules",
