--- a/packages/sample-server-core/tsconfig.json
+++ b/packages/sample-server-core/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../../tsconfig",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "typeRoots": [
+      "../../node_modules/@types"
+    ]
   },
   "exclude": [
     "node_modules",
