fixed css issue

--- a/packages/sample-client-core/package.json
+++ b/packages/sample-client-core/package.json
@@ -23,7 +23,7 @@
     "rimraf": "^2.6.1",
     "typescript": "^2.2.2",
     "webpack": "^2.3.3",
-    "webpack-node-externals": "^1.5.4"
+    "cdm-webpack-node-externals": "^1.5.6"
   },
   "dependencies": {
   },
