--- a/package.json
+++ b/package.json
@@ -53,12 +53,15 @@
     "@types/jest": "^19.2.2",
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.12",
+    "@types/body-parser": "1.16.3",
+    "@types/cors": "2.8.1",
+    "@types/express": "^4.0.35",
     "@types/react": "^15.0.21",
     "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.38",
     "@types/sinon": "^2.1.1",
     "@types/semver": "^5.3.31",
-    "apollo-codegen": "^0.10.9",
+    "apollo-codegen": "^0.10.11",
     "awesome-typescript-loader": "^3.1.2",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
@@ -107,6 +110,8 @@
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "graphql": "^0.9.2",
+    "inversify": "^3.3.0",
+    "reflect-metadata": "^0.1.10",
     "graphql-server-express": "^0.7.1",
     "graphql-subscriptions": "^0.3.1",
     "graphql-tools": "0.11.0",
