--- a/packages/sample-browser-server/package.json
+++ b/packages/sample-browser-server/package.json
@@ -37,8 +37,7 @@
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-fail-plugin": "^1.0.6",
-    "webpack-visualizer-plugin": "^0.1.11",
-    "zakalwe": "https://github.com/rjz/zakalwe.git"
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "react": "^15.4.2",
