--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "helmet": "^3.5.0",
     "morgan": "^1.8.1",
     "react": "^15.4.2",
-    "react-apollo": "^1.0.0-rc.3",
+    "react-apollo": "^1.2.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
