--- a/packages/sample-browser-server/package.json
+++ b/packages/sample-browser-server/package.json
@@ -4,7 +4,10 @@
   "description": "Sample Client server",
   "main": "index.js",
   "scripts": {
+    "jest": "./node_modules/.bin/jest",
     "test": "jest",
+    "test:debug": "npm test -- --runInBand",
+    "test:watch": "npm test -- --watch",
     "prepublish": "npm run build",
     "start": "NODE_ENV=development webpack-dev-server --hot --history-api-fallback",
     "stats": "NODE_ENV=production webpack && open dist/statistics.html",
@@ -55,7 +58,7 @@
       "js"
     ],
     "transform": {
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
   }
