--- a/package.json
+++ b/package.json
@@ -105,28 +105,33 @@
     "cdm-webpack-node-externals": "^1.5.6"
   },
   "dependencies": {
+    "apollo-client": "^1.0.1",
     "cdm-logger": "^0.3.2",
+    "classnames": "^2.2.5",
     "cors": "^2.8.3",
+    "export-dir": "^0.1.2",
     "express": "^4.15.2",
     "graphql": "^0.9.2",
-    "inversify": "^3.3.0",
-    "reflect-metadata": "^0.1.10",
     "graphql-server-express": "^0.7.1",
     "graphql-subscriptions": "^0.3.1",
+    "graphql-tag": "^2.0.0",
     "graphql-tools": "0.11.0",
     "helmet": "^3.5.0",
+    "inversify": "^3.3.0",
     "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-apollo": "^1.2.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-injectable-reducer": "^1.0.3",
+    "redux-injectable-store": "^1.0.0",
     "redux-thunk": "^2.2.0",
+    "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
-    "subscriptions-transport-ws": "^0.5.5-alpha.0",
-    "apollo-client": "^1.0.1",
-    "graphql-tag": "^2.0.0",
     "rxjs": "^5.3.0",
-    "classnames": "^2.2.5",
-    "export-dir": "^0.1.2"
+    "subscriptions-transport-ws": "^0.5.5-alpha.0"
   }
 }
