--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
     "url": "https://github.com/cdmbase/learna-bootstrap/issues"
   },
   "devDependencies": {
+    "@types/body-parser": "1.16.3",
+    "@types/cors": "2.8.1",
+    "@types/express": "^4.0.35",
     "@types/graphql": "^0.9.0",
     "@types/jest": "^19.2.2",
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.12",
-    "@types/body-parser": "1.16.3",
-    "@types/cors": "2.8.1",
-    "@types/express": "^4.0.35",
     "@types/react": "^15.0.23",
     "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.38",
-    "@types/sinon": "^2.1.1",
     "@types/semver": "^5.3.31",
+    "@types/sinon": "^2.1.1",
     "apollo-codegen": "^0.10.11",
     "awesome-typescript-loader": "^3.1.2",
     "babel-cli": "^6.24.0",
@@ -70,13 +70,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "cdm-webpack-node-externals": "^1.5.6",
     "concurrently": "^3.4.0",
     "css-loader": "^0.28.0",
     "eslint": "^3.17.1",
     "eslint-plugin-graphql": "^0.6.1",
     "file-loader": "^0.11.1",
     "graphql": "^0.9.2",
-    "react-addons-test-utils": "^15.4.2",
     "graphql-subscriptions": "^0.3.1",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^19.0.2",
@@ -88,22 +88,23 @@
     "node-dev": "^3.1.3",
     "npm-check-updates": "^2.10.5",
     "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^15.4.2",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
     "sinon-as-promised": "^4.0.3",
     "source-map-loader": "^0.2.1",
     "standard-version": "^4.0.0",
+    "style-loader": "^0.17.0",
     "ts-jest": "^19.0.6",
     "ts-loader": "^2.0.3",
     "tslint": "^5.0.0",
     "tslint-loader": "^3.4.3",
     "typescript": "^2.2.2",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-fail-plugin": "^1.0.6",
-    "webpack-visualizer-plugin": "^0.1.11",
-    "webpack": "^2.3.3",
-    "cdm-webpack-node-externals": "^1.5.6"
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "apollo-client": "^1.0.1",
