--- a/packages/sample-browser-server/package.json
+++ b/packages/sample-browser-server/package.json
@@ -43,6 +43,9 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@sample/client-core": "*",
+    "@sample/client-react": "*",
+    "@sample/client-redux": "*",
     "react": "^15.4.2",
     "react-apollo": "^1.2.0",
     "redux-thunk": "^2.2.0",
