--- a/packages/sample-browser-server/tsconfig.json
+++ b/packages/sample-browser-server/tsconfig.json
@@ -4,7 +4,7 @@
     "sourceMap": true,
     "jsx": "react",
     "rootDir": "./src",
-    "outDir": "./lib",
+    "outDir": "./dist",
     "typeRoots": [
       "../../node_modules/@types"
     ]
