--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -22,10 +22,14 @@
   "author": "Veera Marni",
   "license": "ISC",
   "peerDependencies": {
+    "@sample/client-core": "*",
     "redux": ">=3.6.0",
     "react": ">=15.0.0",
     "react-dom": ">=15.0.0",
     "react-router": "^3.0.0"
+  },
+  "dependencies": {
+    "@sample/client-core": "*"
   },
   "devDependencies": {
     "@types/jest": "^19.2.2",
