--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -21,15 +21,32 @@
   },
   "author": "Veera Marni",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node",
+    "roots": [
+      "src"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+  },
   "peerDependencies": {
     "@sample/client-core": "*",
+    "@sample/client-redux": "*",
     "redux": ">=3.6.0",
     "react": ">=15.0.0",
     "react-dom": ">=15.0.0",
     "react-router": "^3.0.0"
   },
   "dependencies": {
-    "@sample/client-core": "*"
+    "@sample/client-core": "*",
+    "@sample/client-redux": "*"
   },
   "devDependencies": {
     "@types/jest": "^19.2.2",
