--- a/packages/sample-client-core/package.json
+++ b/packages/sample-client-core/package.json
@@ -13,8 +13,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "author": "Veera Marni",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
+  },
+  "author": "CDMBase LLC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cdmbase/fullstack-pro/issues"
+  },
+  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.12",
