--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
   "private": true,
-  "license": "MIT",
   "version": "0.0.1",
-  "author": "CDMbase LLC (https://github.com/cdmbase)",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/apollostack/graphql-server.git"
-  },
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -45,9 +39,16 @@
       "json"
     ]
   },
-  "bugs": {
-    "url": "https://github.com/cdmbase/learna-bootstrap/issues"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
   },
+  "author": "CDMBase LLC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/cdmbase/fullstack-pro/issues"
+  },
+  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
     "@types/body-parser": "1.16.3",
     "@types/cors": "2.8.1",
@@ -61,7 +62,7 @@
     "@types/react-redux": "^4.4.38",
     "@types/semver": "^5.3.31",
     "@types/sinon": "^2.1.1",
-    "apollo-codegen": "^0.10.11",
+    "apollo-codegen": "^0.10.13",
     "awesome-typescript-loader": "^3.1.2",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
@@ -72,11 +73,13 @@
     "babel-preset-react": "^6.23.0",
     "cdm-webpack-node-externals": "^1.5.6",
     "concurrently": "^3.4.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^3.17.1",
-    "eslint-plugin-graphql": "^0.6.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-graphql": "^0.8.0",
     "file-loader": "^0.11.1",
     "graphql": "^0.9.2",
+    "graphql-code-generator": "^0.5.2",
     "graphql-subscriptions": "^0.3.1",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^19.0.2",
@@ -133,7 +136,7 @@
     "redux-thunk": "^2.2.0",
     "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
-    "rxjs": "^5.3.0",
+    "rxjs": "^5.4.0",
     "subscriptions-transport-ws": "^0.5.5-alpha.0"
   }
 }
