--- a/packages/sample-client-redux/package.json
+++ b/packages/sample-client-redux/package.json
@@ -4,8 +4,6 @@
   "description": "GraphQL for sample",
   "main": "lib/index.js",
   "scripts": {
-    "start": "webpack -p --config --progress --watch",
-    "compile": "webpack -p --config --progress",
     "prepare": "npm run compile",
     "jest": "./node_modules/.bin/jest",
     "test": "jest",
@@ -39,23 +37,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/js-accounts/graphql.git"
+    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
   },
-  "author": "Veera Marni",
+  "author": "CDMBase LLC",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/js-accounts/graphql/issues"
+    "url": "https://github.com/cdmbase/fullstack-pro/issues"
   },
-  "homepage": "https://github.com/js-accounts/graphql#readme",
+  "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
     "@types/jest": "^19.2.2",
-    "apollo-codegen": "^0.10.11",
-    "eslint": "^3.17.1",
-    "eslint-plugin-graphql": "^0.6.1",
     "jest": "^19.0.2",
     "lodash": "^4.17.4",
     "nock": "^9.0.11",
-    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3"
   },
@@ -65,7 +59,6 @@
   "peerDependencies": {
     "@sample/client-core": "*",
     "apollo-client": "^1.0.1",
-    "graphql-tag": "^2.0.0",
     "graphql": "^0.9.0",
     "redux": ">=3.6.0"
   },
