--- a/packages/sample-graphql-client/package.json
+++ b/packages/sample-graphql-client/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@sample/client-react",
+  "name": "@sample/graphql",
   "version": "0.0.1",
-  "description": "browser plugin for git",
+  "description": "GraphQL Client side queries and mutations for sample",
   "main": "lib/index.js",
   "scripts": {
-    "start": "webpack -p --config --progress --watch",
-    "compile": "webpack -p --config --progress",
+    "typify": "gql-gen --url http://localhost:3000/graphql --template flow --out ./flow/decl/schema.js ./src/**/*.graphql",
     "prepare": "npm run compile",
     "jest": "./node_modules/.bin/jest",
     "test": "jest",
@@ -35,35 +34,30 @@
     },
     "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cdmbase/fullstack-pro.git"
-  },
   "author": "CDMBase LLC",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cdmbase/fullstack-pro/issues"
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-  "peerDependencies": {
-    "@sample/client-core": "*",
-    "@sample/client-redux": "*",
-    "redux": ">=3.6.0",
-    "react": ">=15.0.0",
-    "react-dom": ">=15.0.0",
-    "react-router": "^3.0.0"
-  },
-  "dependencies": {
-    "@sample/client-core": "*",
-    "@sample/client-redux": "*"
-  },
   "devDependencies": {
     "@types/jest": "^19.2.2",
-    "css-loader": "^0.28.0",
-    "react-addons-test-utils": "^15.4.2",
+    "apollo-codegen": "^0.10.13",
+    "eslint": "^3.19.0",
+    "eslint-plugin-graphql": "^0.8.0",
+    "graphql-code-generator": "^0.5.2",
+    "jest": "^19.0.2",
+    "raw-loader": "^0.5.1",
+    "nock": "^9.0.11",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3",
     "cdm-webpack-node-externals": "^1.5.6"
+  },
+  "dependencies": {
+    "graphql-tag": "^2.0.0"
+  },
+  "peerDependencies": {
+    "graphql": "^0.9.0"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
