--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch": "npm run build:packages:watch",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
-    "build:packages:watch": "lerna run build:lib:watch --stream --no-sort",
+    "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "prebootstrap": "npm install",
     "pretest": "npm run compile",
     "test": "jest",
@@ -85,10 +85,11 @@
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
     "json-loader": "^0.5.4",
-    "lerna": "2.0.0-beta.38",
+    "lerna": "2.0.0-rc.4",
     "lodash": "^4.17.4",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
+    "nodemon": "^1.11.0",
     "npm-check-updates": "^2.10.5",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.4.2",
