--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -4,14 +4,12 @@
   "description": "browser plugin for git",
   "main": "lib/index.js",
   "scripts": {
-    "start": "webpack -p --config --progress --watch",
-    "compile": "webpack -p --config --progress",
-    "prepare": "npm run compile",
     "jest": "./node_modules/.bin/jest",
     "test": "jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
     "prepublish": "npm run build",
+    "watch": "npm run build:lib:watch",
     "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
