--- a/packages/sample-server-core/package.json
+++ b/packages/sample-server-core/package.json
@@ -5,7 +5,12 @@
   "private": true,
   "main": "lib/index.js",
   "scripts": {
+    "jest": "./node_modules/.bin/jest",
+    "test": "jest",
+    "test:debug": "npm test -- --runInBand",
+    "test:watch": "npm test -- --watch",
     "prepublish": "npm run build",
+    "watch": "npm run build:lib:watch",
     "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
