--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "test:notify": "npm run test:watch -- --notify",
-    "start": "npm run build && node dist/main.js",
+    "start": "npm run start:watch",
     "nodemon": "nodemon --watch dist dist/main.js",
     "start:watch": "concurrently \"npm run build:watch\" \"npm run nodemon\"",
     "preupver": "npm test",
@@ -62,6 +62,7 @@
     "@types/morgan": "^1.7.32",
     "@types/graphql": "^0.9.0",
     "@types/node": "^7.0.12",
+    "nodemon": "^1.11.0",
     "json-loader": "^0.5.4",
     "jest": "^19.0.2",
     "rimraf": "^2.6.1",
