--- a/package.json
+++ b/package.json
@@ -52,20 +52,26 @@
   "devDependencies": {
     "@types/body-parser": "1.16.3",
     "@types/cors": "2.8.1",
+    "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
     "@types/graphql": "^0.9.0",
-    "@types/jest": "^19.2.2",
+    "@types/isomorphic-fetch": "0.0.34",
+    "@types/jest": "^19.2.3",
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.12",
-    "@types/react": "^15.0.23",
-    "@types/react-dom": "^0.14.23",
-    "@types/react-redux": "^4.4.38",
+    "@types/prop-types": "^15.5.1",
+    "@types/react": "^15.0.24",
+    "@types/react-addons-test-utils": "^0.14.18",
+    "@types/react-dom": "^15.5.0",
+    "@types/react-redux": "^4.4.40",
+    "@types/recompose": "^0.22.0",
     "@types/semver": "^5.3.31",
-    "@types/sinon": "^2.1.1",
+    "@types/sinon": "^2.2.1",
     "apollo-codegen": "^0.10.13",
-    "awesome-typescript-loader": "^3.1.2",
+    "awesome-typescript-loader": "^3.1.3",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -75,6 +81,7 @@
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-graphql": "^0.8.0",
     "file-loader": "^0.11.1",
@@ -82,8 +89,8 @@
     "graphql-code-generator": "^0.5.2",
     "graphql-subscriptions": "^0.3.1",
     "istanbul": "1.0.0-alpha.2",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
+    "jest": "^20.0.3",
+    "jest-cli": "^20.0.3",
     "json-loader": "^0.5.4",
     "lerna": "2.0.0-rc.4",
     "lodash": "^4.17.4",
@@ -92,26 +99,33 @@
     "nodemon": "^1.11.0",
     "npm-check-updates": "^2.10.5",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.4.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-redux-typescript": "^2.3.0",
+    "react-test-renderer": "^15.5.4",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-mock-store": "^1.2.3",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
-    "sinon": "^2.1.0",
+    "sinon": "^2.2.0",
     "sinon-as-promised": "^4.0.3",
     "source-map-loader": "^0.2.1",
     "standard-version": "^4.0.0",
     "style-loader": "^0.17.0",
-    "ts-jest": "^19.0.6",
+    "ts-jest": "^20.0.4",
     "ts-loader": "^2.0.3",
-    "tslint": "^5.0.0",
-    "tslint-loader": "^3.4.3",
-    "typescript": "^2.2.2",
+    "tslint": "^5.2.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.3.2",
+    "typescript-require": "^0.2.9-1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-fail-plugin": "^1.0.6",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "apollo-client": "^1.0.1",
+    "apollo-client": "^1.2.2",
     "cdm-logger": "^0.3.2",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
@@ -122,22 +136,23 @@
     "graphql-subscriptions": "^0.3.1",
     "graphql-tag": "^2.0.0",
     "graphql-tools": "0.11.0",
-    "helmet": "^3.5.0",
-    "inversify": "^3.3.0",
+    "helmet": "^3.6.0",
+    "inversify": "^4.1.0",
     "morgan": "^1.8.1",
-    "react": "^15.4.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-apollo": "^1.2.0",
     "react-redux": "^5.0.3",
+    "recompose": "^0.23.4",
     "redux": "^3.6.0",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0",
     "redux-injectable-reducer": "^1.0.3",
     "redux-injectable-store": "^1.0.0",
+    "redux-loop": "^2.2.2",
     "redux-thunk": "^2.2.0",
     "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
     "rxjs": "^5.4.0",
-    "subscriptions-transport-ws": "^0.5.5-alpha.0"
+    "prop-types": "^15.5.8",
+    "subscriptions-transport-ws": "^0.6.0"
   }
 }
