--- a/packages/sample-browser-server/package.json
+++ b/packages/sample-browser-server/package.json
@@ -29,20 +29,8 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
-    "@types/jest": "^19.2.2",
-    "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.12",
-    "@types/react": "^15.0.23",
-    "@types/react-dom": "^0.14.23",
-    "@types/react-redux": "^4.4.38",
-    "@types/semver": "^5.3.31",
-    "@types/sinon": "^2.1.1",
-    "awesome-typescript-loader": "^3.1.2",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
-    "react-addons-test-utils": "^15.4.2",
+    "jest": "^20.0.3",
     "rimraf": "^2.6.1",
-    "ts-jest": "^19.0.6",
     "source-map-loader": "^0.2.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
@@ -53,10 +41,10 @@
     "@sample/client-core": "*",
     "@sample/client-react": "*",
     "@sample/client-redux": "*",
-    "react": "^15.4.2",
+    "apollo-client": "^1.2.2",
+    "react": "^15.5.4",
     "react-apollo": "^1.2.0",
     "redux-thunk": "^2.2.0",
-    "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "reselect": "^3.0.0"
