--- a/packages/sample-client-core/package.json
+++ b/packages/sample-client-core/package.json
@@ -29,14 +29,9 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
-    "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.12",
-    "@types/semver": "^5.3.31",
-    "@types/sinon": "^2.1.1",
+    "jest": "^20.0.3",
     "rimraf": "^2.6.1",
-    "typescript": "^2.2.2",
-    "webpack": "^2.3.3",
-    "cdm-webpack-node-externals": "^1.5.6"
+    "webpack": "^2.3.3"
   },
   "dependencies": {},
   "typings": "lib/index.d.ts",
