--- a/packages/sample-client-redux/package.json
+++ b/packages/sample-client-redux/package.json
@@ -46,10 +46,7 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
-    "@types/jest": "^19.2.2",
-    "jest": "^19.0.2",
-    "lodash": "^4.17.4",
-    "nock": "^9.0.11",
+    "jest": "^20.0.3",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3"
   },
@@ -58,8 +55,8 @@
   },
   "peerDependencies": {
     "@sample/client-core": "*",
-    "apollo-client": "^1.0.1",
-    "graphql": "^0.9.0",
+    "apollo-client": ">=1.2.2",
+    "graphql": ">=0.9.0",
     "redux": ">=3.6.0"
   },
   "typings": "lib/index.d.ts",
