--- a/packages/sample-graphql-client/package.json
+++ b/packages/sample-graphql-client/package.json
@@ -41,23 +41,22 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
-    "@types/jest": "^19.2.2",
     "apollo-codegen": "^0.10.13",
+    "babel-eslint": "^7.2.1",
     "eslint": "^3.19.0",
     "eslint-plugin-graphql": "^0.8.0",
     "graphql-code-generator": "^0.5.2",
-    "jest": "^19.0.2",
+    "jest": "^20.0.3",
     "raw-loader": "^0.5.1",
     "nock": "^9.0.11",
     "rimraf": "^2.6.1",
-    "webpack": "^2.3.3",
-    "cdm-webpack-node-externals": "^1.5.6"
+    "webpack": "^2.3.3"
   },
   "dependencies": {
     "graphql-tag": "^2.0.0"
   },
   "peerDependencies": {
-    "graphql": "^0.9.0"
+    "graphql": ">=0.9.0"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
