--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -37,9 +37,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "@types/node": "^7.0.12",
-    "@types/jest": "^19.2.2",
-    "graphql-subscriptions": "^0.3.1",
+    "jest": "^20.0.3",
     "eslint": "^3.19.0",
     "eslint-plugin-graphql": "^0.8.0",
     "graphql": "^0.9.2",
@@ -47,7 +45,8 @@
     "webpack": "^2.3.3"
   },
   "peerDependencies": {
-    "graphql": "^0.9.0 || ^0.10.0"
+    "graphql": "^0.9.0 || ^0.10.0",
+    "graphql-subscriptions": "^0.3.1"
   },
   "optionalDependencies": {
     "@types/graphql": "^0.9.2"
