--- a/packages/sample-server-core/package.json
+++ b/packages/sample-server-core/package.json
@@ -30,10 +30,7 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
-    "@types/minimist": "^1.2.0",
-    "@types/node": "^7.0.12",
-    "@types/semver": "^5.3.31",
-    "@types/sinon": "^2.1.1",
+    "jest": "^20.0.3",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3"
   },
