--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -39,9 +39,7 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "dependencies": {
-    "@types/node": "^7.0.12",
     "@sample/schema": "*",
-    "@types/helmet": "0.0.34",
     "graphql": "^0.9.2",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
@@ -50,21 +48,14 @@
     "graphql-subscriptions": "^0.3.1",
     "graphql-tools": "0.11.0",
     "concurrently": "^3.4.0",
-    "helmet": "^3.5.0",
+    "helmet": "^3.6.0",
     "morgan": "^1.8.1",
-    "subscriptions-transport-ws": "^0.5.5-alpha.0"
+    "subscriptions-transport-ws": "^0.6.0"
   },
   "devDependencies": {
-    "@types/body-parser": "1.16.3",
-    "@types/cors": "2.8.1",
-    "@types/express": "^4.0.35",
-    "@types/jest": "^19.2.2",
-    "@types/morgan": "^1.7.32",
-    "@types/graphql": "^0.9.0",
-    "@types/node": "^7.0.12",
     "nodemon": "^1.11.0",
     "json-loader": "^0.5.4",
-    "jest": "^19.0.2",
+    "jest": "^20.0.3",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.3"
   },
