--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "compile": "lerna exec -- npm run compile",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "lerna": "lerna bootstrap --hoist",
-    "install": "npm run lerna && npm run build",
-    "prestart": "npm run build",
-    "start": "lerna run --scope *server start --stream",
-    "start:client": "lerna run --scope sample-browser-server start --stream",
-    "start:server": "lerna run --scope sample-apollo-server start --stream",
+    "install": "npm run lerna",
+    "start": "babel-node --presets es2015 tools/webpack.run watch",
+    "start:client": "lerna run --scope sample-browser-server start  --stream",
+    "start:server": "lerna run --scope sample-apollo-server start  --stream",
     "watch": "npm run build:packages:watch",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
@@ -49,6 +48,33 @@
     "url": "https://github.com/cdmbase/fullstack-pro/issues"
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
+  "settings": {
+    "backendBuildDir": "packages/sample-server/dist",
+    "frontendBuildDir": "packages/sample-browser-server/dist",
+    "webpackDevPort": 3000,
+    "apiPort": 8080,
+    "ssr": false,
+    "webpackDll": true,
+    "frontendRefreshOnBackendChange": true,
+    "reactHotLoader": false,
+    "debugSQL": false,
+    "persistGraphQL": true,
+    "apolloLogging": true
+  },
+  "app": {
+    "backendBuildDir": "packages/sample-server/dist",
+    "frontendBuildDir": "packages/sample-browser-server/dist",
+    "graphQLUrl": "http://localhost:8080/graphql",
+    "webpackDevPort": 3000,
+    "apiPort": 8080,
+    "ssr": false,
+    "webpackDll": true,
+    "frontendRefreshOnBackendChange": true,
+    "reactHotLoader": false,
+    "debugSQL": false,
+    "persistGraphQL": true,
+    "apolloLogging": false
+  },
   "devDependencies": {
     "@types/body-parser": "1.16.3",
     "@types/cors": "2.8.1",
@@ -57,6 +83,7 @@
     "@types/graphql": "^0.9.0",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^19.2.3",
+    "@types/knex": "0.0.50",
     "@types/minimist": "^1.2.0",
     "@types/node": "^7.0.12",
     "@types/prop-types": "^15.5.1",
@@ -67,7 +94,10 @@
     "@types/recompose": "^0.22.0",
     "@types/semver": "^5.3.31",
     "@types/sinon": "^2.2.1",
+    "@types/webpack": "^2.2.15",
+    "@types/webpack-env": "^1.13.0",
     "apollo-codegen": "^0.10.13",
+    "apollo-logger": "0.0.4",
     "awesome-typescript-loader": "^3.1.3",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
@@ -84,20 +114,25 @@
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-graphql": "^0.8.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "graphql": "^0.9.2",
     "graphql-code-generator": "^0.5.2",
     "graphql-subscriptions": "^0.3.1",
+    "html-webpack-plugin": "^2.28.0",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^20.0.3",
     "jest-cli": "^20.0.3",
     "json-loader": "^0.5.4",
     "lerna": "2.0.0-rc.4",
     "lodash": "^4.17.4",
+    "minilog": "^3.1.0",
+    "mkdirp": "^0.5.1",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
     "nodemon": "^1.11.0",
     "npm-check-updates": "^2.10.5",
+    "persistgraphql-webpack-plugin": "^0.2.3",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.5.1",
     "react-redux-typescript": "^2.3.0",
@@ -119,13 +154,20 @@
     "tslint-loader": "^3.5.3",
     "typescript": "^2.3.2",
     "typescript-require": "^0.2.9-1",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2",
+    "wait-on": "^2.0.2",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5",
     "webpack-fail-plugin": "^1.0.6",
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.6.0",
+    "webpack-sources": "^0.2.3",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@cdmbase/graphql-schema-collector": "^0.3.0",
     "apollo-client": "^1.2.2",
+    "bunyan": "^1.8.10",
     "cdm-logger": "^0.3.2",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
@@ -138,13 +180,19 @@
     "graphql-tools": "0.11.0",
     "helmet": "^3.6.0",
     "inversify": "^4.1.0",
+    "knex": "^0.13.0",
     "morgan": "^1.8.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
     "react-apollo": "^1.2.0",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.3",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "reactstrap": "^4.6.2",
     "recompose": "^0.23.4",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-injectable-reducer": "^1.0.3",
     "redux-injectable-store": "^1.0.0",
     "redux-loop": "^2.2.2",
@@ -152,7 +200,7 @@
     "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
     "rxjs": "^5.4.0",
-    "prop-types": "^15.5.8",
+    "styled-components": "^2.0.0",
     "subscriptions-transport-ws": "^0.6.0"
   }
 }
