--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "jest": "./node_modules/.bin/jest",
+    "validation": "jest --findRelatedTests lib/validation.test.js",
     "test": "jest",
     "test:debug": "npm test -- --runInBand",
     "test:watch": "npm test -- --watch",
@@ -18,13 +19,7 @@
     "build:lib": "webpack",
     "build:lib:watch": "npm run build:lib -- --watch"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "testRegex": "(/.*.(test|spec)).(js|jsx)$",
-    "roots": [
-      "src"
-    ]
-  },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/js-accounts/accounts/tree/master/packages/server"
@@ -42,7 +37,7 @@
     "eslint-plugin-graphql": "^0.8.0",
     "graphql": "^0.9.2",
     "rimraf": "^2.6.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.5.1"
   },
   "peerDependencies": {
     "graphql": "^0.9.0 || ^0.10.0",
