--- a/packages/sample-server/package.json
+++ b/packages/sample-server/package.json
@@ -12,9 +12,8 @@
     "test": "jest",
     "test:watch": "npm test -- --watch",
     "test:notify": "npm run test:watch -- --notify",
-    "start": "npm run start:watch",
-    "nodemon": "nodemon --watch dist dist/main.js",
-    "start:watch": "concurrently \"npm run build:watch\" \"npm run nodemon\"",
+    "start": "npm run build && node dist/main.js",
+    "start:watch": "concurrently \"npm run build:watch\" \"node-dev dist/main.js\"",
     "preupver": "npm test",
     "upver": "standard-version"
   },
@@ -38,6 +37,19 @@
     "url": "https://github.com/cdmbase/fullstack-pro/issues"
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
+  "settings": {
+    "backendBuildDir": "packages/sample-server/dist",
+    "frontendBuildDir": "packages/sample-browser-server/dist",
+    "webpackDevPort": 3000,
+    "apiPort": 8080,
+    "ssr": false,
+    "webpackDll": true,
+    "frontendRefreshOnBackendChange": true,
+    "reactHotLoader": false,
+    "debugSQL": false,
+    "persistGraphQL": true,
+    "apolloLogging": false
+  },
   "dependencies": {
     "@sample/schema": "*",
     "graphql": "^0.9.2",
@@ -57,7 +69,7 @@
     "json-loader": "^0.5.4",
     "jest": "^20.0.3",
     "rimraf": "^2.6.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.5.1"
   },
   "typings": "dist/main.d.ts",
   "typescript": {
