--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    // "jsx": "react",
     "declaration": true,
     "experimentalDecorators": true,
     "sourceMap": true,
@@ -11,7 +12,7 @@
     "pretty": true,
     "removeComments": true,
     "lib": [
-      "es6",
+      "es2017",
       "dom"
     ],
     "types": [
